# nysh

./: Cargo.toml  Dockerfile  README.md  cargo-timing-20210726T045615Z.html  cargo-timing-20210726T045903Z.html  cargo-timing.html  docker-compose.yml  shell.nix
.github/workflows/: contributor_list.yml  rust_cargo_test.yml  rust_test.yml
_demo/: dli
scripts/: install.sh  unisntall.sh
src/: main.rs
src/database/: init.sql
src/nysh_builtin/: builtin_cd.rs  builtin_dotdot.rs  builtin_dream95.rs  builtin_exit.rs  builtin_help.rs  builtin_la.rs  builtin_nsd.rs  builtin_nywer.rs  is_builtin.rs  mod.rs
src/tools/: command_uis.rs  fetch_lib.rs  input.rs  mod.rs  parser.rs  runner.rs  slack.rs  sql_for_autocompletition.rs  uis.rs  welcome_uis.rs
