[package]
name = "nysh"
version = "0.0.1"
edition = "2018"

[dependencies]
maplit = "1.0.2"                 # Collection “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet.
whoami = "1.1.2"           # Retrieve the current user and environment.
console = "0.14.1"            # A terminal and console abstraction for Rust
colored = "2"
rand = "0.8.3"              # Random number generators and other randomness functionality.
futures = "0.3.15"                # An implementation of futures and streams featuring zero allocations, composability, and itera…
tokio = { version = "1.6.0", features = ["full"] }
mini-redis = "0.4" 
tokio-util = { version = "0.6.7"  , features = ["full"] }        # Additional utilities for working with Tokio.
regex = "1.5.4"               # An implementation of regular expressions for Rust. This implementation uses finite automata and g…
hyper = "0.14.7"                                 # A fast and correct HTTP library.
dirs = "3.0.2"                    # A tiny low-level library that provides platform-specific standard locations of directories fo…